2011-03-01 Miguel de Dios  <miguel.dedios@artica.es>

	* include/db/postgresql.php, include/db/mysql.php, include/functions_db.php:
	separate the function "get_db_all_rows_filter", "get_db_num_rows",
	"get_db_all_rows_field_filter" and "get_db_all_fields_in_table" into the two
	version for MySQL and PostgreSQL engine.

2011-03-01 Miguel de Dios  <miguel.dedios@artica.es>

	* include/db/postgresql.php, include/db/mysql.php, include/functions_db.php:
	separate the function "get_db_value_sql", "get_db_row_sql" and
	"get_db_row_filter" into the two version for MySQL and PostgreSQL engine.

2011-03-01 Miguel de Dios  <miguel.dedios@artica.es>
	* include/db/postgresql.php, include/db/mysql.php, include/functions_db.php:
	separate the function "get_db_value_filter" and
	"format_array_to_where_clause_sql" into the two version for MySQL and
	PostgreSQL engine.
	
	* operation/events/events_list.php: cleaned source code style.

2011-03-01 Miguel de Dios  <miguel.dedios@artica.es>
	* operation/events/events_list.php: fixed the html entities in the extend
	list.

2011-02-28 Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions_db.php: cleaned source code, and erased the deprecated
	functions "dame_nombre_real" and "show_alert_row_mini".
	
	* operation/incidents/incident_detail.php,
	operation/snmpconsole/snmp_view.php: replaced obsolete "dame_nombre_real"
	to "get_user_fullname". 

2011-02-28 Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions_db.php: cleaned source code, and erased the deprecated
	function "dame_admin".
	
	* operation/reporting/reporting_xml.php: replaced obsolete "dame_admin"
	to "is_user_admin".

2011-02-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_html.php: new parameter in function print_image in 	
	order to return only src field of image.	 
	* include/ajax/visual_console_builder.ajax.php
	include/functions_gis.php
	godmode/groups/configure_group.php
	godmode/alerts/configure_alert_compound.php