@@ -2495,39 +2495,17 @@ function get_db_all_fields_in_table($table, $field = '', $condition = '', $order
  * @return string Values joined into an SQL string that can fits into an UPDATE
  * sentence.
  */
-function format_array_to_update_sql ($values) {
-	$fields = array ();
+function format_array_to_update_sql($values) {
+	global $config;
 
-	foreach ($values as $field => $value) {
-		if (is_numeric ($field)) {
-			array_push ($fields, $value);
-			continue;
-		}
-		else if ($field[0] == "`") {
-			$field = str_replace('`', '', $field);
-		}
-
-		if ($value === NULL) {
-			$sql = sprintf ("`%s` = NULL", $field);
-		}
-		elseif (is_int ($value) || is_bool ($value)) {
-			$sql = sprintf ("`%s` = %d", $field, $value);
-		}
-		elseif (is_float ($value) || is_double ($value)) {
-			$sql = sprintf ("`%s` = %f", $field, $value);
-		}
-		else {
-			/* String */
-			if (isset ($value[0]) && $value[0] == '`')
-			/* Don't round with quotes if it references a field */
-			$sql = sprintf ("`%s` = %s", $field, $value);
-			else
-			$sql = sprintf ("`%s` = '%s'", $field, $value);
-		}
-		array_push ($fields, $sql);
+	switch ($config["dbtype"]) {
+		case "mysql":
+			return mysql_format_array_to_update_sql($values);
+			break;
+		case "postgresql":
+			return postgresql_format_array_to_update_sql($values);
+			break;
 	}
-
-	return implode (", ", $fields);
 }
 
 /**
@@ -3270,22 +3248,17 @@ function process_sql_insert ($table, $values) {
  *
  * @return mixed False in case of error or invalid values passed. Affected rows otherwise
  */
-function process_sql_update ($table, $values, $where = false, $where_join = 'AND') {
-	$query = sprintf ("UPDATE `%s` SET %s",
-	$table,
-	format_array_to_update_sql ($values));
+function process_sql_update($table, $values, $where = false, $where_join = 'AND') {
+	global $config;
 
-	if ($where) {
-		if (is_string ($where)) {
-			// No clean, the caller should make sure all input is clean, this is a raw function
-			$query .= " WHERE ".$where;
-		}
-		else if (is_array ($where)) {
-			$query .= format_array_to_where_clause_sql ($where, $where_join, ' WHERE ');
-		}
+	switch ($config["dbtype"]) {
+		case "mysql":
+			return mysql_process_sql_update($table, $values, $where, $where_join);
+			break;
+		case "postgresql":
+			return postgresql_process_sql_update($table, $values, $where, $where_join);
+			break;
 	}
-
-	return process_sql ($query);
 }
 
 /**
@@ -3316,25 +3289,17 @@ function process_sql_update ($table, $values, $where = false, $where_join = 'AND
  *
  * @return mixed False in case of error or invalid values passed. Affected rows otherwise
  */
-function process_sql_delete ($table, $where, $where_join = 'AND') {
-	if (empty ($where))
-	/* Should avoid any mistake that lead to deleting all data */
-	return false;
+function process_sql_delete($table, $where, $where_join = 'AND') {
+	global $config;
 
-	$query = sprintf ("DELETE FROM `%s` WHERE ", $table);
-
-	if ($where) {
-		if (is_string ($where)) {
-			/* FIXME: Should we clean the string for sanity?
-			 Who cares if this is deleting data... */
-			$query .= $where;
-		}
-		else if (is_array ($where)) {
-			$query .= format_array_to_where_clause_sql ($where, $where_join);
-		}
+	switch ($config["dbtype"]) {
+		case "mysql":
+			return mysql_process_sql_delete($table, $where, $where_join);
+			break;
+		case "postgresql":
+			return postgresql_process_sql_delete($table, $where, $where_join);
+			break;
 	}
-
-	return process_sql ($query);
 }
 
 /**
