@@ -1,6 +1,12 @@
 2011-03-01 Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/db/postgresql.php, include/db/mysql.php, include/functions_db.php:
+	separate the function "format_array_to_update_sql", "process_sql_update",
+	"process_sql_delete" into the two version for MySQL and PostgreSQL engine.
+
+2011-03-01 Miguel de Dios  <miguel.dedios@artica.es>
+
+	* include/db/postgresql.php, include/db/mysql.php, include/functions_db.php:
 	separate the function "get_db_all_rows_filter", "get_db_num_rows",
 	"get_db_all_rows_field_filter" and "get_db_all_fields_in_table" into the two
 	version for MySQL and PostgreSQL engine.
